--- a/index.html
+++ b/index.html
@@ -5,9 +5,154 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <link rel="stylesheet" href="style.css">
+    <script src="https://cdn.tailwindcss.com"></script>
 </head>
 <body>
+    <!-- Navbar -->
+<nav class="bg-white shadow-md sticky top-0 z-50">
+  <div class="max-w-7xl mx-auto px-4 sm:px-6 lg:px-8">
+    <div class="flex justify-between h-16">
+      <!-- Brand -->
+      <a href="/" class="flex items-center">
+        <img src="./images/logo.jpg" alt="Logo" class="h-12 w-12 rounded-full object-cover">
+        <span class="ml-2 font-bold text-green-700 text-lg">Federal Youth Parliment</span>
+      </a>
+
+      <!-- Mobile menu button -->
+      <div class="flex items-center lg:hidden">
+        <button id="mobileMenuBtn" class="text-gray-700 focus:outline-none">
+          <svg class="h-6 w-6" xmlns="http://www.w3.org/2000/svg" fill="none"
+               viewBox="0 0 24 24" stroke="currentColor">
+            <path stroke-linecap="round" stroke-linejoin="round"
+                  stroke-width="2"
+                  d="M4 6h16M4 12h16M4 18h16"/>
+          </svg>
+        </button>
+      </div>
+
+      <!-- Desktop Menu -->
+      <div class="hidden lg:flex lg:items-center lg:space-x-6 text-gray-700 font-semibold">
+        <a href="/" class="hover:text-green-700">Home</a>
+
+        <!-- About dropdown -->
+        <div class="relative group">
+          <button class="hover:text-green-700 flex items-center gap-1">
+            About
+            <svg class="w-4 h-4" fill="none" stroke="currentColor" viewBox="0 0 24 24">
+              <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
+                    d="M19 9l-7 7-7-7" />
+            </svg>
+          </button>
+          <div
+            class="absolute hidden group-hover:block bg-white shadow-lg rounded mt-2 py-2 w-48">
+            <a href="/about" class="block px-4 py-2 hover:bg-gray-100">Mission</a>
+            <a href="/constitution" class="block px-4 py-2 hover:bg-gray-100">Constitution</a>
+            <a href="/executive" class="block px-4 py-2 hover:bg-gray-100">Executive Members</a>
+          </div>
+        </div>
+
+        <a href="/programs" class="hover:text-green-700">Programs</a>
+
+        <!-- Membership dropdown -->
+        <div class="relative group">
+          <button class="hover:text-green-700 flex items-center gap-1">
+            Membership
+            <svg class="w-4 h-4" fill="none" stroke="currentColor" viewBox="0 0 24 24">
+              <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
+                    d="M19 9l-7 7-7-7" />
+            </svg>
+          </button>
+          <div
+            class="absolute hidden group-hover:block bg-white shadow-lg rounded mt-2 py-2 w-48">
+            <a href="/membership" class="block px-4 py-2 hover:bg-gray-100">Join</a>
+            <a href="/memberList" class="block px-4 py-2 hover:bg-gray-100">Members List</a>
+          </div>
+        </div>
+
+        <a href="/news" class="hover:text-green-700">News</a>
+        <a href="/contact" class="hover:text-green-700">Contact</a>
+
+        <!-- CTA -->
+        <a href="/membership"
+           class="ml-4 bg-green-700 text-white px-4 py-2 rounded-full hover:bg-green-800 transition">
+          Join Us
+        </a>
+      </div>
+    </div>
+  </div>
+
+  <!-- Mobile Menu (hidden by default) -->
+  <div id="mobileMenu" class="hidden lg:hidden px-4 pt-2 pb-4 space-y-2 text-gray-700 font-semibold">
+    <a href="/" class="block hover:text-green-700">Home</a>
+
+    <details class="group">
+      <summary class="cursor-pointer hover:text-green-700">About</summary>
+      <div class="ml-4 space-y-1">
+        <a href="/about" class="block hover:text-green-700">Mission</a>
+        <a href="/constitution" class="block hover:text-green-700">Constitution</a>
+        <a href="/executive" class="block hover:text-green-700">Executive Members</a>
+      </div>
+    </details>
+
+    <a href="/programs" class="block hover:text-green-700">Programs</a>
+
+    <details class="group">
+      <summary class="cursor-pointer hover:text-green-700">Membership</summary>
+      <div class="ml-4 space-y-1">
+        <a href="/membership" class="block hover:text-green-700">Join</a>
+        <a href="/memberList" class="block hover:text-green-700">Members List</a>
+      </div>
+    </details>
+
+    <a href="/news" class="block hover:text-green-700">News</a>
+    <a href="/contact" class="block hover:text-green-700">Contact</a>
+
+    <a href="/membership"
+       class="block bg-green-700 text-white px-4 py-2 rounded-full hover:bg-green-800 transition">
+      Join Us
+    </a>
+  </div>
+</nav>
+
     
+    <!-- ******************** HERO *********************** -->
+    <section class="w-full bg-white py-20 hero">
+    <div class="max-w-6xl mx-auto px-4 flex flex-col gap-6 relative z-20">
+        <h1 class="font-extrabold text-4xl md:text-5xl">
+        Standing for <span class="text-green-700">YOUTH</span>
+        </h1>
+        <p class="text-lg text-gray-600">
+        We are leading the political platform for young minds.
+        </p>
+        <a href="/membership"
+        class="hidden lg:inline-block bg-green-700 text-white font-bold rounded-full px-6 py-3 mt-2 hover:bg-green-800 transition">
+        Join FYP Now
+        </a>
+    </div>
+    </section>
+
+    <!-- ******************** ABOUT *********************** -->
+    <section class="w-full py-16 bg-[#FAF3DD]">
+    <div class="max-w-6xl mx-auto px-4 flex flex-col md:flex-row items-center gap-10">
+        <div class="flex flex-col gap-6">
+        <h1 class="text-3xl font-bold">About FYP</h1>
+        <p class="text-lg text-gray-700">
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Molestiae totam natus
+            tenetur voluptatibus sequi incidunt sunt rem, ea voluptate suscipit dolore cumque
+            at voluptas repellat!
+        </p>
+        <a href="/membership"
+            class="hidden lg:inline-block bg-green-700 text-white font-bold rounded-full px-6 py-3 mt-2 hover:bg-green-800 transition w-fit">
+            Join FYP Now
+        </a>
+        </div>
+        <img src="/images/about-img.jpg"
+            alt="About FYP"
+            class="w-full md:w-1/2 rounded-lg shadow-md object-cover" />
+    </div>
+    </section>
+
+    <img src="images/home/bg.jpg" alt="">
 
     <script src="scripts/script.js"></script>
 </body>
