--- a/pages/constitution.html
+++ b/pages/constitution.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <script src="https://cdn.tailwindcss.com"></script>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.6.0/css/all.min.css">
     
 </head>
 <body>
@@ -107,6 +108,82 @@
    
   </div>
 </nav>
-    constitution
+
+
+
+    <main>
+
+    </main>
+
+
+
+
+     <!-- Footer -->
+  <footer class="bg-[#0b162c] text-white py-10">
+    <div class="max-w-7xl mx-auto px-6 grid grid-cols-1 md:grid-cols-3 gap-8">
+
+      <!-- Quick Links -->
+      <div>
+        <h2 class="text-xl font-bold mb-4">Quick Links</h2>
+        <ul class="space-y-2">
+          <li><a href="#" class="text-green-500 hover:underline">Privacy Policy</a></li>
+          <li><a href="#" class="text-green-500 hover:underline">About Us</a></li>
+          <li><a href="#" class="text-green-500 hover:underline">Contact</a></li>
+          <li><a href="#" class="text-green-500 hover:underline">Terms and Conditions</a></li>
+        </ul>
+      </div>
+
+      <!-- Logo + Description -->
+      <div class="text-center">
+        <div class="flex justify-center items-center mb-3">
+          <img src="../images/logo.jpg" alt="Logo" class="w-12 h-12 mr-2">
+          <h2 class="text-xl font-bold">
+            Youth Organization <span class="text-green-600">PAKISTAN</span>
+          </h2>
+        </div>
+        <p class="text-gray-300 text-sm">
+          Youth Organization Pakistan (YOP), founded in 2021, empowers 15,000+ members 
+          to drive social change, leadership, innovation, and national progress through 
+          development initiatives and global engagement.
+        </p>
+      </div>
+
+      <!-- Contact -->
+      <div>
+        <h2 class="text-xl font-bold mb-4">Contact</h2>
+        <ul class="space-y-3 text-gray-300">
+          <li class="flex items-center gap-2">
+            <i class="fa-solid fa-location-dot text-green-500"></i>
+            Royal Avenue, Islamabad, Pakistan
+          </li>
+          <li class="flex items-center gap-2">
+            <i class="fa-solid fa-phone text-green-500"></i>
+            +92 332 0047146
+          </li>
+          <li class="flex items-center gap-2">
+            <i class="fa-solid fa-envelope text-green-500"></i>
+            info@pakistanyouthorganization.com
+          </li>
+        </ul>
+
+        <!-- Social Icons -->
+        <div class="flex gap-4 mt-4">
+          <a href="#" class="bg-green-600 p-2 rounded-full text-white hover:bg-green-700">
+            <i class="fa-brands fa-facebook-f"></i>
+          </a>
+          <a href="#" class="bg-green-600 p-2 rounded-full text-white hover:bg-green-700">
+            <i class="fa-brands fa-twitter"></i>
+          </a>
+          <a href="#" class="bg-green-600 p-2 rounded-full text-white hover:bg-green-700">
+            <i class="fa-brands fa-instagram"></i>
+          </a>
+          <a href="#" class="bg-green-600 p-2 rounded-full text-white hover:bg-green-700">
+            <i class="fa-brands fa-linkedin-in"></i>
+          </a>
+        </div>
+      </div>
+
+    </div>
+  </footer>
 </body>
 </html>
