--- a/pages/executive.html
+++ b/pages/executive.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <script src="https://cdn.tailwindcss.com"></script>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.6.0/css/all.min.css">
 
 </head>
 <body>
@@ -107,6 +108,205 @@
    
   </div>
 </nav>
-executive
+
+
+<main>
+    <section class="w-full py-20 bg-[#FAF3DD]">
+  <div class="max-w-6xl mx-auto px-4">
+    <h1 class="font-bold text-3xl">Executive Members</h1>
+
+    <!-- Cards wrapper -->
+    <div class="mt-8 grid gap-6 sm:grid-cols-2 lg:grid-cols-3">
+      
+    <div class="max-w-sm mx-auto shadow-xl rounded-2xl overflow-hidden border border-gray-200 hover:shadow-2xl transition duration-300 relative transform transition duration-300 hover:-translate-y-2 hover:scale-105 hover:shadow-xl">
+  <!-- Background Image -->
+  <div class="absolute inset-0">
+    <img src="../images/executives/musa.jpg" alt="Background"
+      class="w-full h-full object-cover opacity-60" />
+    <div class="absolute inset-0 bg-green-50 bg-opacity-60"></div>
+  </div>
+
+  <!-- Profile Content -->
+  <div class="relative flex flex-col items-center p-6">
+    <img src="../images/executives/musa.jpg" alt="President"
+      class="w-40 h-40 rounded-full border-4 border-green-600 shadow-md object-cover mb-4" />
+    <h3 class="text-xl font-bold text-gray-800">Musa Bukhari</h3>
+    <p class="text-green-700 font-semibold mb-3">President</p>
+    <p class="text-gray-700 text-center text-sm leading-relaxed">
+      Visionary leader dedicated to empowering youth through innovation, collaboration, 
+      and impactful community programs.
+    </p>
+  </div>
+
+  <!-- Social Media -->
+  <div class="relative flex justify-center gap-6 py-4 bg-white/70 backdrop-blur-md border-t">
+    <a href="#" class="text-gray-500 hover:text-green-700 transition text-xl">
+      <i class="fab fa-facebook-f"></i>
+    </a>
+    <a href="#" class="text-gray-500 hover:text-green-700 transition text-xl">
+      <i class="fab fa-twitter"></i>
+    </a>
+    <a href="#" class="text-gray-500 hover:text-green-700 transition text-xl">
+      <i class="fab fa-instagram"></i>
+    </a>
+  </div>
+</div>
+
+      <!-- Duplicate for more members -->
+
+     <!-- President Card -->
+<div class="max-w-sm mx-auto shadow-xl rounded-2xl overflow-hidden border border-gray-200 hover:shadow-2xl transition duration-300 relative transform transition duration-300 hover:-translate-y-2 hover:scale-105 hover:shadow-xl">
+  <!-- Background Image -->
+  <div class="absolute inset-0">
+    <img src="../images/executives/musa.jpg" alt="Background"
+      class="w-full h-full object-cover opacity-60" />
+    <div class="absolute inset-0 bg-green-50 bg-opacity-60"></div>
+  </div>
+
+  <!-- Profile Content -->
+  <div class="relative flex flex-col items-center p-6">
+    <img src="../images/executives/musa.jpg" alt="President"
+      class="w-40 h-40 rounded-full border-4 border-green-600 shadow-md object-cover mb-4" />
+    <h3 class="text-xl font-bold text-gray-800">Musa Bukhari</h3>
+    <p class="text-green-700 font-semibold mb-3">President</p>
+    <p class="text-gray-700 text-center text-sm leading-relaxed">
+      Visionary leader dedicated to empowering youth through innovation, collaboration, 
+      and impactful community programs.
+    </p>
+  </div>
+
+  <!-- Social Media -->
+  <div class="relative flex justify-center gap-6 py-4 bg-white/70 backdrop-blur-md border-t">
+    <a href="#" class="text-gray-500 hover:text-green-700 transition text-xl">
+      <i class="fab fa-facebook-f"></i>
+    </a>
+    <a href="#" class="text-gray-500 hover:text-green-700 transition text-xl">
+      <i class="fab fa-twitter"></i>
+    </a>
+    <a href="#" class="text-gray-500 hover:text-green-700 transition text-xl">
+      <i class="fab fa-instagram"></i>
+    </a>
+  </div>
+</div>
+
+
+
+<div class="max-w-sm mx-auto shadow-xl rounded-2xl overflow-hidden border border-gray-200 hover:shadow-2xl transition duration-300 relative transform transition duration-300 hover:-translate-y-2 hover:scale-105 hover:shadow-xl">
+  <!-- Background Image -->
+  <div class="absolute inset-0">
+    <img src="../images/executives/musa.jpg" alt="Background"
+      class="w-full h-full object-cover opacity-60" />
+    <div class="absolute inset-0 bg-green-50 bg-opacity-60"></div>
+  </div>
+
+  <!-- Profile Content -->
+  <div class="relative flex flex-col items-center p-6">
+    <img src="../images/executives/musa.jpg" alt="President"
+      class="w-40 h-40 rounded-full border-4 border-green-600 shadow-md object-cover mb-4" />
+    <h3 class="text-xl font-bold text-gray-800">Musa Bukhari</h3>
+    <p class="text-green-700 font-semibold mb-3">President</p>
+    <p class="text-gray-700 text-center text-sm leading-relaxed">
+      Visionary leader dedicated to empowering youth through innovation, collaboration, 
+      and impactful community programs.
+    </p>
+  </div>
+
+  <!-- Social Media -->
+  <div class="relative flex justify-center gap-6 py-4 bg-white/70 backdrop-blur-md border-t">
+    <a href="#" class="text-gray-500 hover:text-green-700 transition text-xl">
+      <i class="fab fa-facebook-f"></i>
+    </a>
+    <a href="#" class="text-gray-500 hover:text-green-700 transition text-xl">
+      <i class="fab fa-twitter"></i>
+    </a>
+    <a href="#" class="text-gray-500 hover:text-green-700 transition text-xl">
+      <i class="fab fa-instagram"></i>
+    </a>
+  </div>
+</div>
+
+
+    </div>
+
+    <!-- CTA Button -->
+    <a href="/programs"
+       class="block w-max mx-auto mt-8 bg-green-700 text-white font-bold rounded-full px-6 py-3 hover:bg-green-800 transition">
+      See more
+    </a>
+
+  </div>
+</section>
+  
+
+</main>
+
+
+ <!-- Footer -->
+  <footer class="bg-[#0b162c] text-white py-10">
+    <div class="max-w-7xl mx-auto px-6 grid grid-cols-1 md:grid-cols-3 gap-8">
+
+      <!-- Quick Links -->
+      <div>
+        <h2 class="text-xl font-bold mb-4">Quick Links</h2>
+        <ul class="space-y-2">
+          <li><a href="#" class="text-green-500 hover:underline">Privacy Policy</a></li>
+          <li><a href="#" class="text-green-500 hover:underline">About Us</a></li>
+          <li><a href="#" class="text-green-500 hover:underline">Contact</a></li>
+          <li><a href="#" class="text-green-500 hover:underline">Terms and Conditions</a></li>
+        </ul>
+      </div>
+
+      <!-- Logo + Description -->
+      <div class="text-center">
+        <div class="flex justify-center items-center mb-3">
+          <img src="../images/logo.jpg" alt="Logo" class="w-12 h-12 mr-2">
+          <h2 class="text-xl font-bold">
+            Youth Organization <span class="text-green-600">PAKISTAN</span>
+          </h2>
+        </div>
+        <p class="text-gray-300 text-sm">
+          Youth Organization Pakistan (YOP), founded in 2021, empowers 15,000+ members 
+          to drive social change, leadership, innovation, and national progress through 
+          development initiatives and global engagement.
+        </p>
+      </div>
+
+      <!-- Contact -->
+      <div>
+        <h2 class="text-xl font-bold mb-4">Contact</h2>
+        <ul class="space-y-3 text-gray-300">
+          <li class="flex items-center gap-2">
+            <i class="fa-solid fa-location-dot text-green-500"></i>
+            Royal Avenue, Islamabad, Pakistan
+          </li>
+          <li class="flex items-center gap-2">
+            <i class="fa-solid fa-phone text-green-500"></i>
+            +92 332 0047146
+          </li>
+          <li class="flex items-center gap-2">
+            <i class="fa-solid fa-envelope text-green-500"></i>
+            info@pakistanyouthorganization.com
+          </li>
+        </ul>
+
+        <!-- Social Icons -->
+        <div class="flex gap-4 mt-4">
+          <a href="#" class="bg-green-600 p-2 rounded-full text-white hover:bg-green-700">
+            <i class="fa-brands fa-facebook-f"></i>
+          </a>
+          <a href="#" class="bg-green-600 p-2 rounded-full text-white hover:bg-green-700">
+            <i class="fa-brands fa-twitter"></i>
+          </a>
+          <a href="#" class="bg-green-600 p-2 rounded-full text-white hover:bg-green-700">
+            <i class="fa-brands fa-instagram"></i>
+          </a>
+          <a href="#" class="bg-green-600 p-2 rounded-full text-white hover:bg-green-700">
+            <i class="fa-brands fa-linkedin-in"></i>
+          </a>
+        </div>
+      </div>
+
+    </div>
+  </footer>
 </body>
 </html>
