--- a/pages/memberList.html
+++ b/pages/memberList.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <script src="https://cdn.tailwindcss.com"></script>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.6.0/css/all.min.css">
 
 </head>
 <body>
@@ -107,6 +108,184 @@
    
   </div>
 </nav>
-    memberList
+    <main>  
+        <section class="px-6 py-10 bg-gray-50">
+  <h2 class="text-2xl font-bold text-center text-green-700 mb-6">
+    Youth Parliament Members
+  </h2>
+
+  <div class="overflow-x-auto shadow-lg rounded-xl border border-gray-200">
+    <table class="min-w-full bg-white">
+      <!-- Table Head -->
+      <thead class="bg-green-600 text-white">
+        <tr>
+          <th class="py-3 px-4 text-left text-sm font-semibold">#</th>
+          <th class="py-3 px-4 text-left text-sm font-semibold">Name</th>
+          <th class="py-3 px-4 text-left text-sm font-semibold">Designation</th>
+          <th class="py-3 px-4 text-left text-sm font-semibold">Qualification</th>
+          <th class="py-3 px-4 text-left text-sm font-semibold">Email</th>
+        </tr>
+      </thead>
+
+      <!-- Table Body -->
+      <tbody class="divide-y divide-gray-200">
+        <!-- Row Example -->
+        <tr class="hover:bg-green-50 transition">
+          <td class="py-3 px-4 text-sm text-gray-600">1</td>
+          <td class="py-3 px-4 font-medium text-gray-800">Musa Bukhari</td>
+          <td class="py-3 px-4 text-gray-600">President</td>
+          <td class="py-3 px-4 text-gray-600">BS Computer Science</td>
+          <td class="py-3 px-4 text-blue-600 underline">musa@example.com</td>
+        </tr>
+
+        <tr class="hover:bg-green-50 transition">
+          <td class="py-3 px-4 text-sm text-gray-600">2</td>
+          <td class="py-3 px-4 font-medium text-gray-800">Ali Khan</td>
+          <td class="py-3 px-4 text-gray-600">Vice President</td>
+          <td class="py-3 px-4 text-gray-600">MBA</td>
+          <td class="py-3 px-4 text-blue-600 underline">ali.khan@example.com</td>
+        </tr>
+
+        <tr class="hover:bg-green-50 transition">
+          <td class="py-3 px-4 text-sm text-gray-600">3</td>
+          <td class="py-3 px-4 font-medium text-gray-800">Ayesha Ahmed</td>
+          <td class="py-3 px-4 text-gray-600">General Secretary</td>
+          <td class="py-3 px-4 text-gray-600">LLB</td>
+          <td class="py-3 px-4 text-blue-600 underline">ayesha@example.com</td>
+        </tr>
+
+        <tr class="hover:bg-green-50 transition">
+          <td class="py-3 px-4 text-sm text-gray-600">4</td>
+          <td class="py-3 px-4 font-medium text-gray-800">Bilal Hussain</td>
+          <td class="py-3 px-4 text-gray-600">Finance Secretary</td>
+          <td class="py-3 px-4 text-gray-600">B.Com</td>
+          <td class="py-3 px-4 text-blue-600 underline">bilal@example.com</td>
+        </tr>
+
+        <tr class="hover:bg-green-50 transition">
+          <td class="py-3 px-4 text-sm text-gray-600">5</td>
+          <td class="py-3 px-4 font-medium text-gray-800">Fatima Noor</td>
+          <td class="py-3 px-4 text-gray-600">Education Secretary</td>
+          <td class="py-3 px-4 text-gray-600">M.Ed</td>
+          <td class="py-3 px-4 text-blue-600 underline">fatima@example.com</td>
+        </tr>
+
+        <!-- Dummy rows until 20 -->
+        <tr class="hover:bg-green-50 transition">
+          <td class="py-3 px-4 text-sm text-gray-600">6</td>
+          <td class="py-3 px-4 font-medium text-gray-800">Imran Shah</td>
+          <td class="py-3 px-4 text-gray-600">Cultural Secretary</td>
+          <td class="py-3 px-4 text-gray-600">BA Arts</td>
+          <td class="py-3 px-4 text-blue-600 underline">imran@example.com</td>
+        </tr>
+
+        <tr class="hover:bg-green-50 transition">
+          <td class="py-3 px-4 text-sm text-gray-600">7</td>
+          <td class="py-3 px-4 font-medium text-gray-800">Sara Malik</td>
+          <td class="py-3 px-4 text-gray-600">Youth Coordinator</td>
+          <td class="py-3 px-4 text-gray-600">BS Sociology</td>
+          <td class="py-3 px-4 text-blue-600 underline">sara@example.com</td>
+        </tr>
+
+        <tr class="hover:bg-green-50 transition">
+          <td class="py-3 px-4 text-sm text-gray-600">8</td>
+          <td class="py-3 px-4 font-medium text-gray-800">Hamza Rauf</td>
+          <td class="py-3 px-4 text-gray-600">Media Secretary</td>
+          <td class="py-3 px-4 text-gray-600">BS Mass Communication</td>
+          <td class="py-3 px-4 text-blue-600 underline">hamza@example.com</td>
+        </tr>
+
+        <tr class="hover:bg-green-50 transition">
+          <td class="py-3 px-4 text-sm text-gray-600">9</td>
+          <td class="py-3 px-4 font-medium text-gray-800">Hina Tariq</td>
+          <td class="py-3 px-4 text-gray-600">Women Representative</td>
+          <td class="py-3 px-4 text-gray-600">MSc Psychology</td>
+          <td class="py-3 px-4 text-blue-600 underline">hina@example.com</td>
+        </tr>
+
+        <tr class="hover:bg-green-50 transition">
+          <td class="py-3 px-4 text-sm text-gray-600">10</td>
+          <td class="py-3 px-4 font-medium text-gray-800">Usman Khalid</td>
+          <td class="py-3 px-4 text-gray-600">Health Secretary</td>
+          <td class="py-3 px-4 text-gray-600">MBBS</td>
+          <td class="py-3 px-4 text-blue-600 underline">usman@example.com</td>
+        </tr>
+
+        <!-- Continue similarly until 20 rows -->
+      </tbody>
+    </table>
+  </div>
+</section>
+
+    </main>
+
+
+     <!-- Footer -->
+  <footer class="bg-[#0b162c] text-white py-10">
+    <div class="max-w-7xl mx-auto px-6 grid grid-cols-1 md:grid-cols-3 gap-8">
+
+      <!-- Quick Links -->
+      <div>
+        <h2 class="text-xl font-bold mb-4">Quick Links</h2>
+        <ul class="space-y-2">
+          <li><a href="#" class="text-green-500 hover:underline">Privacy Policy</a></li>
+          <li><a href="#" class="text-green-500 hover:underline">About Us</a></li>
+          <li><a href="#" class="text-green-500 hover:underline">Contact</a></li>
+          <li><a href="#" class="text-green-500 hover:underline">Terms and Conditions</a></li>
+        </ul>
+      </div>
+
+      <!-- Logo + Description -->
+      <div class="text-center">
+        <div class="flex justify-center items-center mb-3">
+          <img src="../images/logo.jpg" alt="Logo" class="w-12 h-12 mr-2">
+          <h2 class="text-xl font-bold">
+            Youth Organization <span class="text-green-600">PAKISTAN</span>
+          </h2>
+        </div>
+        <p class="text-gray-300 text-sm">
+          Youth Organization Pakistan (YOP), founded in 2021, empowers 15,000+ members 
+          to drive social change, leadership, innovation, and national progress through 
+          development initiatives and global engagement.
+        </p>
+      </div>
+
+      <!-- Contact -->
+      <div>
+        <h2 class="text-xl font-bold mb-4">Contact</h2>
+        <ul class="space-y-3 text-gray-300">
+          <li class="flex items-center gap-2">
+            <i class="fa-solid fa-location-dot text-green-500"></i>
+            Royal Avenue, Islamabad, Pakistan
+          </li>
+          <li class="flex items-center gap-2">
+            <i class="fa-solid fa-phone text-green-500"></i>
+            +92 332 0047146
+          </li>
+          <li class="flex items-center gap-2">
+            <i class="fa-solid fa-envelope text-green-500"></i>
+            info@pakistanyouthorganization.com
+          </li>
+        </ul>
+
+        <!-- Social Icons -->
+        <div class="flex gap-4 mt-4">
+          <a href="#" class="bg-green-600 p-2 rounded-full text-white hover:bg-green-700">
+            <i class="fa-brands fa-facebook-f"></i>
+          </a>
+          <a href="#" class="bg-green-600 p-2 rounded-full text-white hover:bg-green-700">
+            <i class="fa-brands fa-twitter"></i>
+          </a>
+          <a href="#" class="bg-green-600 p-2 rounded-full text-white hover:bg-green-700">
+            <i class="fa-brands fa-instagram"></i>
+          </a>
+          <a href="#" class="bg-green-600 p-2 rounded-full text-white hover:bg-green-700">
+            <i class="fa-brands fa-linkedin-in"></i>
+          </a>
+        </div>
+      </div>
+
+    </div>
+  </footer>
 </body>
 </html>
