--- a/pages/programs.html
+++ b/pages/programs.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <script src="https://cdn.tailwindcss.com"></script>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.6.0/css/all.min.css">
 
 </head>
 <body>
@@ -119,6 +120,128 @@
   </div>
 </nav>
 
-    programs
+
+<main>
+     <section class="w-full py-16 bg-green-50">
+  <div class="max-w-6xl mx-auto px-4">
+    <h1 class="text-3xl md:text-4xl font-bold text-gray-900">Our Programs</h1>
+
+    <!-- Cards Grid -->
+    <div class="mt-10 grid gap-8 sm:grid-cols-2 lg:grid-cols-3">
+      
+      <!-- Card 1 -->
+      <div class="bg-white rounded-lg shadow-lg overflow-hidden hover:shadow-xl transform transition duration-300 hover:-translate-y-2 hover:scale-105 hover:shadow-xl">
+        <img src="../images/home/bg2.jpg" alt="Youth Gathering" class="w-full h-48 object-cover">
+        <div class="p-5">
+          <h5 class="text-xl font-semibold text-green-800">Youth Gathering</h5>
+          <p class="mt-3 text-gray-600">
+            Some quick example text to build on the card title and make up the bulk of the card's content.
+          </p>
+        </div>
+      </div>
+
+      <!-- Card 2 -->
+      <div class="bg-white rounded-lg shadow-lg overflow-hidden hover:shadow-xl transform transition duration-300 hover:-translate-y-2 hover:scale-105 hover:shadow-xl">
+        <img src="../images/home/bg2.jpg" alt="Youth Gathering" class="w-full h-48 object-cover">
+        <div class="p-5">
+          <h5 class="text-xl font-semibold text-green-800">Leadership Program</h5>
+          <p class="mt-3 text-gray-600">
+            Some quick example text to build on the card title and make up the bulk of the card's content.
+          </p>
+        </div>
+      </div>
+
+      <!-- Card 3 -->
+      <div class="bg-white rounded-lg shadow-lg overflow-hidden hover:shadow-xl transform transition duration-300 hover:-translate-y-2 hover:scale-105 hover:shadow-xl ">
+        <img src="../images/home/bg2.jpg" alt="Youth Gathering" class="w-full h-48 object-cover">
+        <div class="p-5">
+          <h5 class="text-xl font-semibold text-green-800">Skill Development</h5>
+          <p class="mt-3 text-gray-600">
+            Some quick example text to build on the card title and make up the bulk of the card's content.
+          </p>
+        </div>
+      </div>
+    </div>
+
+    <!-- CTA Button -->
+    <div class="mt-10 flex justify-center">
+      <a href="/programs" class="bg-green-700 text-white font-bold rounded-full px-6 py-3 hover:bg-green-800 transition">
+        See more
+      </a>
+    </div>
+  </div>
+</section>
+    
+</main>
+
+
+ <!-- Footer -->
+  <footer class="bg-[#0b162c] text-white py-10">
+    <div class="max-w-7xl mx-auto px-6 grid grid-cols-1 md:grid-cols-3 gap-8">
+
+      <!-- Quick Links -->
+      <div>
+        <h2 class="text-xl font-bold mb-4">Quick Links</h2>
+        <ul class="space-y-2">
+          <li><a href="#" class="text-green-500 hover:underline">Privacy Policy</a></li>
+          <li><a href="#" class="text-green-500 hover:underline">About Us</a></li>
+          <li><a href="#" class="text-green-500 hover:underline">Contact</a></li>
+          <li><a href="#" class="text-green-500 hover:underline">Terms and Conditions</a></li>
+        </ul>
+      </div>
+
+      <!-- Logo + Description -->
+      <div class="text-center">
+        <div class="flex justify-center items-center mb-3">
+          <img src="../images/logo.jpg" alt="Logo" class="w-12 h-12 mr-2">
+          <h2 class="text-xl font-bold">
+            Youth Organization <span class="text-green-600">PAKISTAN</span>
+          </h2>
+        </div>
+        <p class="text-gray-300 text-sm">
+          Youth Organization Pakistan (YOP), founded in 2021, empowers 15,000+ members 
+          to drive social change, leadership, innovation, and national progress through 
+          development initiatives and global engagement.
+        </p>
+      </div>
+
+      <!-- Contact -->
+      <div>
+        <h2 class="text-xl font-bold mb-4">Contact</h2>
+        <ul class="space-y-3 text-gray-300">
+          <li class="flex items-center gap-2">
+            <i class="fa-solid fa-location-dot text-green-500"></i>
+            Royal Avenue, Islamabad, Pakistan
+          </li>
+          <li class="flex items-center gap-2">
+            <i class="fa-solid fa-phone text-green-500"></i>
+            +92 332 0047146
+          </li>
+          <li class="flex items-center gap-2">
+            <i class="fa-solid fa-envelope text-green-500"></i>
+            info@pakistanyouthorganization.com
+          </li>
+        </ul>
+
+        <!-- Social Icons -->
+        <div class="flex gap-4 mt-4">
+          <a href="#" class="bg-green-600 p-2 rounded-full text-white hover:bg-green-700">
+            <i class="fa-brands fa-facebook-f"></i>
+          </a>
+          <a href="#" class="bg-green-600 p-2 rounded-full text-white hover:bg-green-700">
+            <i class="fa-brands fa-twitter"></i>
+          </a>
+          <a href="#" class="bg-green-600 p-2 rounded-full text-white hover:bg-green-700">
+            <i class="fa-brands fa-instagram"></i>
+          </a>
+          <a href="#" class="bg-green-600 p-2 rounded-full text-white hover:bg-green-700">
+            <i class="fa-brands fa-linkedin-in"></i>
+          </a>
+        </div>
+      </div>
+
+    </div>
+  </footer>
+
 </body>
 </html>
