--- a/pages/news.html
+++ b/pages/news.html
@@ -107,6 +107,85 @@
    
   </div>
 </nav>
-    news
+    <!-- Hero Section -->
+  <section class="bg-green-700 text-white py-16 text-center">
+    <h1 class="text-4xl font-bold">Latest News & Updates</h1>
+    <p class="mt-4 text-lg">Stay updated with the latest happenings at the Federal Youth Organization</p>
+  </section>
+
+  <!-- Main Content -->
+  <main class="container mx-auto px-6 py-12 grid grid-cols-1 lg:grid-cols-3 gap-12">
+
+    <!-- News Articles -->
+    <div class="lg:col-span-2 space-y-8">
+      <!-- Single Article -->
+      <article class="bg-white shadow-md rounded-lg overflow-hidden">
+        <img src="../images/home/about-img.jpg" alt="News 1" class="w-full h-64 object-cover">
+        <div class="p-6">
+          <span class="text-sm text-gray-500">September 15, 2025</span>
+          <h2 class="text-2xl font-bold text-green-700 mt-2">Youth Parliament Launches New Initiative</h2>
+          <p class="mt-4 text-gray-600">The Federal Youth Organization has launched a new nationwide initiative aimed at empowering young leaders through skill development, leadership training, and networking opportunities...</p>
+          <a href="#" class="mt-4 inline-block bg-green-700 text-white px-4 py-2 rounded-lg hover:bg-green-800">Read More</a>
+        </div>
+      </article>
+
+      <article class="bg-white shadow-md rounded-lg overflow-hidden">
+        <img src="../images/home/bg2.jpg" alt="News 2" class="w-full h-64 object-cover">
+        <div class="p-6">
+          <span class="text-sm text-gray-500">August 30, 2025</span>
+          <h2 class="text-2xl font-bold text-green-700 mt-2">Annual Youth Conference 2025 Announced</h2>
+          <p class="mt-4 text-gray-600">The upcoming Annual Youth Conference 2025 will be held in Islamabad, featuring speakers, workshops, and networking sessions to inspire the next generation of leaders...</p>
+          <a href="#" class="mt-4 inline-block bg-green-700 text-white px-4 py-2 rounded-lg hover:bg-green-800">Read More</a>
+        </div>
+      </article>
+
+      <article class="bg-white shadow-md rounded-lg overflow-hidden">
+        <img src="../images/home/bg2.jpg" alt="News 3" class="w-full h-64 object-cover">
+        <div class="p-6">
+          <span class="text-sm text-gray-500">July 20, 2025</span>
+          <h2 class="text-2xl font-bold text-green-700 mt-2">Federal Youth Parliament Meets Policy Makers</h2>
+          <p class="mt-4 text-gray-600">Youth representatives met with government officials to discuss the importance of youth-led policy making, education reforms, and sustainable development initiatives...</p>
+          <a href="#" class="mt-4 inline-block bg-green-700 text-white px-4 py-2 rounded-lg hover:bg-green-800">Read More</a>
+        </div>
+      </article>
+    </div>
+
+    <!-- Sidebar -->
+    <aside class="space-y-8">
+      <!-- Categories -->
+      <div class="bg-white shadow-md rounded-lg p-6">
+        <h3 class="text-xl font-bold text-green-700 mb-4">Categories</h3>
+        <ul class="space-y-2 text-gray-600">
+          <li><a href="#" class="hover:text-blue-600">Youth Empowerment</a></li>
+          <li><a href="#" class="hover:text-blue-600">Events</a></li>
+          <li><a href="#" class="hover:text-blue-600">Programs</a></li>
+          <li><a href="#" class="hover:text-blue-600">Leadership</a></li>
+          <li><a href="#" class="hover:text-blue-600">Announcements</a></li>
+        </ul>
+      </div>
+
+      <!-- Recent Posts -->
+      <div class="bg-white shadow-md rounded-lg p-6">
+        <h3 class="text-xl font-bold text-green-700 mb-4">Recent Posts</h3>
+        <ul class="space-y-4">
+          <li>
+            <a href="#" class="block hover:text-green-600">
+              🌍 Youth Leaders Join Climate Action Summit
+            </a>
+          </li>
+          <li>
+            <a href="#" class="block hover:text-blue-600">
+              🎓 Scholarship Opportunities for Students
+            </a>
+          </li>
+          <li>
+            <a href="#" class="block hover:text-blue-600">
+              🤝 Federal Youth Parliament Expands Membership
+            </a>
+          </li>
+        </ul>
+      </div>
+    </aside>
+  </main>
 </body>
 </html>
