--- a/pages/contact.html
+++ b/pages/contact.html
@@ -7,7 +7,7 @@
     <script src="https://cdn.tailwindcss.com"></script>
 
 </head>
-<body>
+
      <!-- Navbar -->
 <nav class="bg-white shadow-md sticky top-0 z-50">
   <div class="max-w-7xl mx-auto px-4 sm:px-6 lg:px-8">
@@ -107,6 +107,97 @@
    
   </div>
 </nav>
-    contact
+<section class="text-white min-h-screen flex items-center justify-center p-6">
+  <main class="w-full max-w-3xl bg-green-800 rounded-xl shadow-lg overflow-hidden">
+    <div class="p-8">
+      <h1 class="text-2xl md:text-3xl font-extrabold text-white mb-2">
+        Contact Federal Youth Parliament
+      </h1>
+      <p class="text-sm text-green-100 mb-6">
+        Have a question or want to join? Send us a message and we’ll get back to you.
+      </p>
+
+      <!-- Success message (hidden by default) -->
+      <div
+        id="success"
+        class="hidden mb-4 p-4 rounded-md bg-green-600 border border-green-400 text-white"
+      >
+        Thank you — your message has been sent successfully.
+      </div>
+
+      <form id="contactForm" class="space-y-4" novalidate>
+        <div class="grid grid-cols-1 md:grid-cols-2 gap-4">
+          <!-- Full name -->
+          <label class="flex flex-col">
+            <span class="text-sm font-medium text-white">
+              Full name <span class="text-red-300">*</span>
+            </span>
+            <input
+              name="name"
+              id="name"
+              type="text"
+              required
+              placeholder="Your full name"
+              class="mt-2 p-3 border border-green-500 rounded-lg bg-green-900 text-white placeholder-green-300 focus:outline-none focus:ring-2 focus:ring-green-400"
+            />
+          </label>
+
+          <!-- Email -->
+          <label class="flex flex-col">
+            <span class="text-sm font-medium text-white">
+              Email address <span class="text-red-300">*</span>
+            </span>
+            <input
+              name="email"
+              id="email"
+              type="email"
+              required
+              placeholder="you@example.com"
+              class="mt-2 p-3 border border-green-500 rounded-lg bg-green-900 text-white placeholder-green-300 focus:outline-none focus:ring-2 focus:ring-green-400"
+            />
+          </label>
+        </div>
+
+        <!-- Message -->
+        <label class="flex flex-col">
+          <span class="text-sm font-medium text-white">
+            Message <span class="text-red-300">*</span>
+          </span>
+          <textarea
+            name="message"
+            id="message"
+            rows="5"
+            required
+            placeholder="Write your message here..."
+            class="mt-2 p-3 border border-green-500 rounded-lg bg-green-900 text-white placeholder-green-300 focus:outline-none focus:ring-2 focus:ring-green-400"
+          ></textarea>
+        </label>
+
+        <!-- Buttons -->
+        <div class="flex items-center gap-3">
+          <button
+            type="submit"
+            class="inline-flex items-center justify-center bg-white text-green-700 px-5 py-3 rounded-lg font-medium hover:bg-green-100 transition"
+          >
+            Send Message
+          </button>
+
+          <button
+            type="reset"
+            class="inline-flex items-center justify-center border border-green-400 px-4 py-3 rounded-lg text-white hover:bg-green-600 transition"
+          >
+            Reset
+          </button>
+        </div>
+
+        <!-- Small note -->
+        <p class="text-xs text-green-200 mt-2">
+          By sending this message you agree to our terms. We will handle your personal info responsibly.
+        </p>
+      </form>
+    </div>
+  </main>
+</section>
+
 </body>
 </html>
