--- a/pages/membership.html
+++ b/pages/membership.html
@@ -107,6 +107,110 @@
    
   </div>
 </nav>
-    membership
+<section class=" min-h-screen flex items-center justify-center p-6">
+  <main class="w-full max-w-4xl bg-green-800 rounded-xl shadow-lg overflow-hidden text-white">
+    <div class="p-8">
+      <h1 class="text-3xl font-extrabold text-white mb-4">Join Federal Youth Parliament</h1>
+      <p class="text-green-200 mb-8">
+        Fill in the form below to apply for membership. We welcome energetic and motivated youth who want to make a change.
+      </p>
+
+      <!-- Success message -->
+      <div id="success1" class="hidden mb-4 p-4 rounded-md bg-green-600 border border-green-400 text-white">
+        ✅ Thank you for applying! We will contact you soon.
+      </div>
+
+      <form id="joinForm" class="space-y-6" novalidate>
+        <!-- Personal Info -->
+        <div class="grid grid-cols-1 md:grid-cols-2 gap-6">
+          <label class="flex flex-col">
+            <span class="text-sm font-medium">Full Name <span class="text-red-300">*</span></span>
+            <input type="text" name="name" required placeholder="Your full name"
+              class="mt-2 p-3 border border-green-400 rounded-lg bg-green-900 text-white placeholder-green-300 focus:ring-2 focus:ring-green-400" />
+          </label>
+
+          <label class="flex flex-col">
+            <span class="text-sm font-medium">Email <span class="text-red-300">*</span></span>
+            <input type="email" name="email" required placeholder="you@example.com"
+              class="mt-2 p-3 border border-green-400 rounded-lg bg-green-900 text-white placeholder-green-300 focus:ring-2 focus:ring-green-400" />
+          </label>
+        </div>
+
+        <div class="grid grid-cols-1 md:grid-cols-2 gap-6">
+          <label class="flex flex-col">
+            <span class="text-sm font-medium">Phone <span class="text-red-300">*</span></span>
+            <input type="tel" name="phone" required placeholder="03XX-XXXXXXX"
+              class="mt-2 p-3 border border-green-400 rounded-lg bg-green-900 text-white placeholder-green-300 focus:ring-2 focus:ring-green-400" />
+          </label>
+
+          <label class="flex flex-col">
+            <span class="text-sm font-medium">CNIC <span class="text-red-300">*</span></span>
+            <input type="text" name="cnic" required placeholder="12345-1234567-1"
+              pattern="^\d{5}-\d{7}-\d{1}$"
+              class="mt-2 p-3 border border-green-400 rounded-lg bg-green-900 text-white placeholder-green-300 focus:ring-2 focus:ring-green-400" />
+          </label>
+        </div>
+
+        <!-- Gender and Age -->
+        <div class="grid grid-cols-1 md:grid-cols-2 gap-6">
+          <label class="flex flex-col">
+            <span class="text-sm font-medium">Gender <span class="text-red-300">*</span></span>
+            <select name="gender" required
+              class="mt-2 p-3 border border-green-400 rounded-lg bg-green-900 text-white focus:ring-2 focus:ring-green-400">
+              <option value="" class="text-black">— Select Gender —</option>
+              <option class="text-black">Male</option>
+              <option class="text-black">Female</option>
+              <option class="text-black">Other</option>
+            </select>
+          </label>
+
+          <label class="flex flex-col">
+            <span class="text-sm font-medium">Age <span class="text-red-300">*</span></span>
+            <input type="number" name="age" required min="15" max="35" placeholder="Your age"
+              class="mt-2 p-3 border border-green-400 rounded-lg bg-green-900 text-white placeholder-green-300 focus:ring-2 focus:ring-green-400" />
+            <small class="text-xs text-green-200 mt-1">Must be between 15–35 years</small>
+          </label>
+        </div>
+
+        <!-- Province -->
+        <label class="flex flex-col">
+          <span class="text-sm font-medium">Province / Region <span class="text-red-300">*</span></span>
+          <select name="province" required
+            class="mt-2 p-3 border border-green-400 rounded-lg bg-green-900 text-white focus:ring-2 focus:ring-green-400">
+            <option value="" class="text-black">— Select Province —</option>
+            <option class="text-black">Punjab</option>
+            <option class="text-black">Sindh</option>
+            <option class="text-black">Khyber Pakhtunkhwa</option>
+            <option class="text-black">Balochistan</option>
+            <option class="text-black">Gilgit Baltistan</option>
+            <option class="text-black">Azad Jammu & Kashmir</option>
+            <option class="text-black">Islamabad Capital Territory</option>
+          </select>
+        </label>
+
+        <!-- Education -->
+        <label class="flex flex-col">
+          <span class="text-sm font-medium">Education</span>
+          <input type="text" name="education" placeholder="Your education level"
+            class="mt-2 p-3 border border-green-400 rounded-lg bg-green-900 text-white placeholder-green-300 focus:ring-2 focus:ring-green-400" />
+        </label>
+
+        <!-- Motivation -->
+        <label class="flex flex-col">
+          <span class="text-sm font-medium">Why do you want to join? <span class="text-red-300">*</span></span>
+          <textarea name="reason" required rows="4" placeholder="Write briefly why you want to join..."
+            class="mt-2 p-3 border border-green-400 rounded-lg bg-green-900 text-white placeholder-green-300 focus:ring-2 focus:ring-green-400"></textarea>
+        </label>
+
+        <!-- Submit -->
+        <button type="submit"
+          class="w-full bg-white text-green-700 py-3 rounded-lg font-medium hover:bg-green-100 transition">
+          Submit Application
+        </button>
+      </form>
+    </div>
+  </main>
+</section>
+
 </body>
 </html>
