--- a/index.html
+++ b/index.html
@@ -120,7 +120,7 @@
 <main>
     
    <!-- ******************** HERO *********************** -->
-<section class="relative h-screen flex items-center justify-center text-center text-white">
+<section class="relative h-screen flex items-center justify-center text-center text-white overflow-x-hidden">
   <!-- Background Slideshow -->
   <div id="slideshow" class="absolute inset-0">
     <img src="./images/home/bg.jpg" class="absolute inset-0 w-full h-full object-cover opacity-100 transition-opacity duration-1000" />
